# OpenCV_Tutorials_ZH

./: .gitignore  .gitmodules  Jenkinsfile  README.md  SUMMARY.md  book.json
2DFeatureFrameworks/: 2DFeatureFrameworks.md
src/: readme.md
src/ProjectsCpp/: CMakeLists.txt  readme.md
src/ProjectsCpp/2DFeatures/: CMakeLists.txt
src/ProjectsCpp/2DFeatures/HarrisCornerDetector/: 2d_features_harris_corner_detector.cpp  CMakeLists.txt
src/ProjectsCpp/2DFeatures/HomographyConcenpts/: 2d_features_homography_from_camera_displacement.cpp  2d_features_homography_perspective_correction.cpp  2d_features_homography_pose_from_homography.cpp  CMakeLists.txt
src/ProjectsCpp/CoreFunctions/: CMakeLists.txt  readme.md
src/ProjectsCpp/CoreFunctions/DiscreteFourierTransform/: CMakeLists.txt  DiscreteFourierTransform.md  discrete_fourier_transform.cpp
src/ProjectsCpp/ImageStiching/: CMakeLists.txt
src/ProjectsCpp/ImageStiching/Sticher/: CMakeLists.txt  im_stitching.cpp
src/ProjectsCpp/MachineLearning/: CMakeLists.txt
src/ProjectsCpp/MachineLearning/SVM/: CMakeLists.txt  ML_tutorial_introduction_svm.cpp
src/ProjectsCpp/MachineLearning/SVM_for_Non-Linearly_Sperable_Data/: CMakeLists.txt  ML_non_linear_svms.cpp
src/ProjectsCpp/ObjectDetection/: CMakeLists.txt  OD_cascade_classifier.cpp
src/ProjectsCpp/PhotoModule/: CMakeLists.txt
src/ProjectsCpp/PhotoModule/SeamlessClone/: CMakeLists.txt  PM_seamless_cloning.cpp
src/ProjectsCpp/VideoAnalysis/: CMakeLists.txt
src/ProjectsCpp/VideoAnalysis/OpticalFlow/: CMakeLists.txt  VA_optical_flow.cpp  VA_optical_flow_dense.cpp
(+30 files in other folders)
